--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "littp",
+  "name": "lighttp",
   "license": "MIT",
   "version": "1.0.0-alpha.1",
   "main": "lib/index.js",
@@ -16,12 +16,12 @@
   "author": "Jessy <github@jessym.com>",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jessym/jttp.git"
+    "url": "git+https://github.com/jessym/lighttp.git"
   },
   "bugs": {
-    "url": "https://github.com/jessym/jttp/issues"
+    "url": "https://github.com/jessym/lighttp/issues"
   },
-  "homepage": "https://github.com/jessym/jttp#readme",
+  "homepage": "https://github.com/jessym/lighttp#readme",
   "scripts": {
     "test": "jest",
     "testw": "jest --watch",
