--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 on:
   push:
+    tags:
+      - '*'
     branches:
       - main
   pull_request:
@@ -7,7 +9,7 @@ on:
       - main
 
 env:
-  NODE_VERSION: ''
+  NODE_MAJOR_VERSION: ''
 
 jobs:
   build-test-publish:
@@ -16,15 +18,15 @@ jobs:
 
     steps:
       - name: 'Setup :: Checkout'
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: 'Setup :: Determine Node version'
-        run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_ENV
+        run: echo "NODE_MAJOR_VERSION=$(grep node .tool-versions | awk '{ print $2 }' | awk -F. '{ print $1 }')" >> $GITHUB_ENV
 
       - name: 'Setup :: Node'
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ env.NODE_MAJOR_VERSION }}
           cache: 'npm'
 
       - name: 'Application :: Install Dependencies'
@@ -36,9 +38,14 @@ jobs:
       - name: 'QA :: Unit Tests'
         run: npm run test
 
+      - name: 'Release :: Set Version'
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          echo "Releasing: $GITHUB_REF_NAME"
+          npm version $GITHUB_REF_NAME --git-tag-version false
+
       - name: 'Deployment :: Publish to NPM'
         if: ${{ github.ref == 'refs/heads/main' }}
         run: |
           npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
           npm publish --access public
-          npm config delete //registry.npmjs.org/:_authToken
