--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yesttp",
   "license": "MIT",
-  "version": "1.0.0-alpha.3",
+  "version": "0.0.0-snapshot",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -28,11 +28,11 @@
     "build": "rm -rf lib && tsc"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.5",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.2"
   }
 }
