revert tsconfig change

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
+    "module": "CommonJS",
     "outDir": "./lib/",
     "declaration": true,
     "lib": ["ESNext", "dom"],
